disconnect contextmenu from all aboutToXXContextMenu receivers

Context menus are shown in a single view at a time so only the active
KTextEditor::ViewPrivate instance should be signalled when a context
menu is about to show or hide.

BUG: 401069
Differential Revision: https://phabricator.kde.org/D16927